[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "prometheus-immich-exporter"
version = "1.2.1"
description = "Prometheus exporter for immich"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["prometheus", "immich"]
dependencies = [
    "prometheus_client>=0.25.0,<1",
    "requests>=2.33.1,<3",
    "python-json-logger>=4.1.0,<5",
    "psutil>=7.2.2,<8",
]

[tool.setuptools]
packages = ["immich_exporter"]

[project.scripts]
immich_exporter = "immich_exporter.exporter:main"
